--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "everydoor-plugin-repo"
-version = "0.1.0"
+version = "0.1.1"
 description = "Every Door Plugin Repository"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -21,3 +21,10 @@ dependencies = [
 dev = [
     "mypy>=1.15.0",
 ]
+
+[build-system]
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["app", "migrations"]
